Restyling button in activity_count.xml.

--- a/JURANI/app/src/main/res/layout/activity_count.xml
+++ b/JURANI/app/src/main/res/layout/activity_count.xml
@@ -48,9 +48,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp"
+            android:elevation="0dp"
             android:textSize="30dp"
             android:textStyle="bold"
-            android:text="-" />
+            android:text="-"
+            style="?android:attr/borderlessButtonStyle"/>
 
         <TextView
             android:id="@+id/count"
@@ -67,9 +69,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
+            android:elevation="0dp"
             android:textSize="30dp"
             android:textStyle="bold"
-            android:text="+"/>
+            android:text="+"
+            style="?android:attr/borderlessButtonStyle"/>
 
     </LinearLayout>
 
