--- a/JURANI/app/src/main/res/layout/activity_random.xml
+++ b/JURANI/app/src/main/res/layout/activity_random.xml
@@ -46,7 +46,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/next_button_player"
+        android:id="@+id/stop_button_player"
         android:layout_marginTop="27dp"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
