--- a/JURANI/app/src/main/res/layout/activity_random.xml
+++ b/JURANI/app/src/main/res/layout/activity_random.xml
@@ -18,6 +18,7 @@
         app:popupTheme="@style/AppTheme"/>
 
     <TextView
+        android:id="@+id/parent_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
@@ -28,6 +29,7 @@
         android:text="@string/text_rolling" />
 
     <TextView
+        android:id="@+id/child_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="25dp"
