--- a/JURANI/app/src/main/res/layout/activity_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_player.xml
@@ -42,6 +42,7 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:singleLine="true"
         android:textSize="21dp"
         android:textStyle="bold" />
 
