--- a/JURANI/app/src/main/res/layout/activity_random.xml
+++ b/JURANI/app/src/main/res/layout/activity_random.xml
@@ -18,7 +18,6 @@
         app:popupTheme="@style/AppTheme"/>
 
     <TextView
-        android:id="@+id/parent_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
@@ -29,7 +28,6 @@
         android:text="@string/text_rolling" />
 
     <TextView
-        android:id="@+id/child_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="25dp"
@@ -48,7 +46,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/stop_button_player"
+        android:id="@+id/stop_button_random_player"
         android:layout_marginTop="27dp"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
