--- a/JURANI/app/src/main/res/layout/activity_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_player.xml
@@ -28,6 +28,7 @@
         android:text="@string/text_who_play" />
 
     <TextView
+        android:id="@+id/player_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="25dp"
