--- a/JURANI/app/src/main/res/layout/activity_random_target.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_target.xml
@@ -7,10 +7,10 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimary"
-    tools:context="com.papier.jurani.ChosenPlayerActivity">
+    tools:context="com.papier.jurani.RandomTargetActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/random_player_toolbar"
+        android:id="@+id/random_target_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:elevation="0dp"
@@ -18,6 +18,7 @@
         app:popupTheme="@style/AppTheme"/>
 
     <TextView
+        android:id="@+id/first_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
@@ -25,59 +26,33 @@
         android:textSize="21dp"
         android:textStyle="bold"
         android:fontFamily=""
-        android:text="@string/text_turn_en" />
+        android:text="Truth/Dare" />
 
     <TextView
+        android:id="@+id/second_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13dp"
-        android:text="@string/text_turn_id" />
+        android:text="Task" />
 
     <TextView
-        android:id="@+id/chosen_name"
-        android:background="#FFF000"
+        android:id="@+id/random_target"
+        android:background="#FFFFFF"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:textSize="21dp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/stop_button_random_target"
+        android:layout_marginTop="27dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp" >
-
-        <Button
-            android:id="@+id/repeat_button"
-            android:layout_marginTop="27dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="@string/action_repeat"
-            android:layout_gravity="center_horizontal"
-            style="?android:attr/borderlessButtonStyle"/>
-
-        <Button
-            android:id="@+id/truth_button"
-            android:layout_marginTop="27dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/action_truth"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
-            android:id="@+id/dare_button"
-            android:layout_marginTop="27dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/action_dare"
-            android:layout_gravity="center_horizontal" />
-
-    </LinearLayout>
-
+        android:text="@string/action_stop"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
