--- a/JURANI/app/src/main/res/layout/activity_random_truth.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_truth.xml
@@ -18,7 +18,6 @@
         app:popupTheme="@style/AppTheme"/>
 
     <TextView
-        android:id="@+id/parent_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
@@ -26,20 +25,19 @@
         android:textSize="21dp"
         android:textStyle="bold"
         android:fontFamily=""
-        android:text="@string/text_dare_en" />
+        android:text="@string/text_truth_en" />
 
     <TextView
-        android:id="@+id/child_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13dp"
-        android:text="@string/text_dare_id" />
+        android:text="@string/text_truth_id" />
 
     <TextView
-        android:id="@+id/random_name"
+        android:id="@+id/random_truth"
         android:background="#FFFFFF"
         android:gravity="center"
         android:layout_width="match_parent"
@@ -47,20 +45,12 @@
         android:textSize="21dp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/stop_button_random_truth"
+        android:layout_marginTop="27dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp" >
-
-        <Button
-            android:id="@+id/next_button_truth"
-            android:layout_marginTop="27dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/action_next"
-            android:layout_gravity="center_horizontal" />
-
-    </LinearLayout>
+        android:text="@string/action_stop"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
