--- a/JURANI/app/src/main/res/layout/activity_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_player.xml
@@ -44,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:singleLine="true"
+        android:digits="@string/alphabet"
         android:textSize="21dp"
         android:textStyle="bold" />
 
