--- a/JURANI/app/src/main/res/layout/activity_chosen_target.xml
+++ b/JURANI/app/src/main/res/layout/activity_chosen_target.xml
@@ -52,9 +52,7 @@
         android:layout_marginTop="27dp"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
         android:text="@string/action_repeat"
-        android:layout_gravity="center_horizontal"
-        style="?android:attr/borderlessButtonStyle"/>
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
