--- a/JURANI/app/src/main/res/layout/activity_splash.xml
+++ b/JURANI/app/src/main/res/layout/activity_splash.xml
@@ -7,23 +7,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:weightSum="1">
 
-    <TextView
+    <ImageView
+        android:layout_width="220dp"
+        android:layout_height="225dp"
+        android:id="@+id/logoImage"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="200dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="50dp"
-        android:textStyle="bold"
-        android:fontFamily=""
-        android:text="@string/app_name" />
-
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="@string/app_text" />
+        android:src="@drawable/jurani_logo_min"
+        android:layout_weight="1" />
 
 </LinearLayout>
