--- a/JURANI/app/src/main/res/layout/activity_count.xml
+++ b/JURANI/app/src/main/res/layout/activity_count.xml
@@ -77,11 +77,19 @@
 
     </LinearLayout>
 
+    <!--Linear Layout just for disguising-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="10"></LinearLayout>
+
     <Button
         android:id="@+id/next_button_count"
-        android:layout_marginTop="5dp"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:background="@drawable/button_next"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="@string/action_next"
         android:layout_gravity="center_horizontal" />
 
