--- a/JURANI/app/src/main/res/layout/activity_input_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_input_player.xml
@@ -18,6 +18,7 @@
         app:popupTheme="@style/AppTheme"/>
 
     <TextView
+        android:id="@+id/player_parent_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
@@ -28,7 +29,7 @@
         android:text="@string/text_who_play" />
 
     <TextView
-        android:id="@+id/player_text"
+        android:id="@+id/player_child_text"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="25dp"
@@ -48,11 +49,19 @@
         android:textSize="21dp"
         android:textStyle="bold" />
 
+    <!--Linear Layout just for disguising-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="10"></LinearLayout>
+
     <Button
         android:id="@+id/next_button_player"
-        android:layout_marginTop="27dp"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:background="@drawable/button_next"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="@string/action_next"
         android:layout_gravity="center_horizontal" />
 
