--- a/JURANI/app/src/main/res/layout/activity_count.xml
+++ b/JURANI/app/src/main/res/layout/activity_count.xml
@@ -17,11 +17,17 @@
         android:theme="@style/AppTheme"
         app:popupTheme="@style/AppTheme"/>
 
+    <!--Linear Layout just for disguising-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="60"></LinearLayout>
+
     <TextView
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         android:textSize="21dp"
         android:textStyle="bold"
         android:fontFamily=""
@@ -30,8 +36,9 @@
     <TextView
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
-        android:layout_marginTop="7dp"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:layout_marginTop="7dp"
         android:textSize="16dp"
         android:text="@string/text_count_id" />
 
@@ -39,15 +46,15 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" >
+        android:layout_weight="5">
 
         <Button
             android:id="@+id/min_count"
             android:background="@color/colorPrimary"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp"
+            android:layout_gravity="center_vertical"
             android:elevation="0dp"
             android:textSize="30dp"
             android:textStyle="bold"
@@ -67,8 +74,8 @@
             android:background="@color/colorPrimary"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
+            android:layout_gravity="center_vertical"
             android:elevation="0dp"
             android:textSize="30dp"
             android:textStyle="bold"
@@ -80,8 +87,8 @@
     <!--Linear Layout just for disguising-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="10"></LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="80"></LinearLayout>
 
     <Button
         android:id="@+id/next_button_count"
