Edit position using layout_weight.

--- a/JURANI/app/src/main/res/layout/activity_random_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_player.xml
@@ -17,11 +17,17 @@
         android:theme="@style/AppTheme"
         app:popupTheme="@style/AppTheme"/>
 
+    <!--Linear Layout just for disguising-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="50"></LinearLayout>
+
     <TextView
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         android:textSize="21dp"
         android:textStyle="bold"
         android:fontFamily=""
@@ -29,10 +35,10 @@
 
     <TextView
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="15"
+        android:layout_marginTop="7dp"
         android:textSize="16dp"
         android:text="@string/text_turn_id" />
 
@@ -42,23 +48,24 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_weight="1"
         android:textSize="21dp"
         android:textStyle="bold" />
 
     <!--Linear Layout just for disguising-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="10"></LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="80"></LinearLayout>
 
     <Button
-        android:id="@+id/stop_button_random_player"
+        android:id="@+id/next_button_count"
         android:background="@drawable/button_next"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="@string/action_stop"
+        android:text="@string/action_next"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
