--- a/JURANI/app/src/main/res/layout/activity_splash.xml
+++ b/JURANI/app/src/main/res/layout/activity_splash.xml
@@ -11,8 +11,10 @@
     android:weightSum="1">
 
     <ImageView
-        android:layout_width="220dp"
-        android:layout_height="225dp"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/logoImage"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/jurani_logo_min"
