--- a/JURANI/app/src/main/res/layout/activity_input_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_input_player.xml
@@ -17,12 +17,18 @@
         android:theme="@style/AppTheme"
         app:popupTheme="@style/AppTheme"/>
 
+    <!--Linear Layout just for disguising-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="50"></LinearLayout>
+
     <TextView
         android:id="@+id/player_parent_text"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         android:textSize="21dp"
         android:textStyle="bold"
         android:fontFamily=""
@@ -31,19 +37,20 @@
     <TextView
         android:id="@+id/player_child_text"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="15"
+        android:layout_marginTop="7dp"
         android:textSize="16dp"
         android:text="@string/text_nama" />
 
     <EditText
         android:id="@+id/input_name"
-        android:background="#FFFFFF"
+        android:background="@color/colorTextBase"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_weight="1"
         android:singleLine="true"
         android:digits="@string/alphabet"
         android:textSize="21dp"
@@ -52,8 +59,8 @@
     <!--Linear Layout just for disguising-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="10"></LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="80"></LinearLayout>
 
     <Button
         android:id="@+id/next_button_player"
