--- a/JURANI/app/src/main/res/layout/activity_count.xml
+++ b/JURANI/app/src/main/res/layout/activity_count.xml
@@ -98,6 +98,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/action_next"
+        android:textSize="20dp"
+        android:textColor="#FFFFFF"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
