--- a/JURANI/app/src/main/res/layout/activity_random_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_player.xml
@@ -65,7 +65,9 @@
         android:layout_height="60dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="@string/action_next"
+        android:text="@string/action_stop"
+        android:textSize="20dp"
+        android:textColor="#FFFFFF"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
