--- a/JURANI/app/src/main/res/layout/activity_count.xml
+++ b/JURANI/app/src/main/res/layout/activity_count.xml
@@ -99,7 +99,7 @@
         android:layout_marginRight="10dp"
         android:text="@string/action_next"
         android:textSize="20dp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorTextBase"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
