--- a/JURANI/app/src/main/res/layout/activity_input_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_input_player.xml
@@ -70,6 +70,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/action_next"
+        android:textSize="20dp"
+        android:textColor="@color/colorTextBase"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
