--- a/JURANI/app/src/main/res/layout/activity_random_dare.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_dare.xml
@@ -38,7 +38,7 @@
 
     <TextView
         android:id="@+id/random_dare"
-        android:background="#FFFFFF"
+        android:background="@color/colorTextBase"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -59,6 +59,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/action_stop"
+        android:textSize="20dp"
+        android:textColor="@color/colorTextBase"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
