--- a/JURANI/app/src/main/res/layout/activity_random_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_player.xml
@@ -67,7 +67,7 @@
         android:layout_marginRight="10dp"
         android:text="@string/action_stop"
         android:textSize="20dp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorTextBase"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
