--- a/JURANI/app/src/main/res/layout/activity_random_target.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_target.xml
@@ -40,7 +40,7 @@
 
     <TextView
         android:id="@+id/random_target"
-        android:background="#FFFFFF"
+        android:background="@color/colorTextBase"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -61,6 +61,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/action_stop"
+        android:textSize="20dp"
+        android:textColor="@color/colorTextBase"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
