--- a/JURANI/app/src/main/res/layout/activity_chosen_target.xml
+++ b/JURANI/app/src/main/res/layout/activity_chosen_target.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:textSize="21dp"
         android:textStyle="bold"
+        android:textColor="@color/colorText"
         android:fontFamily=""
         android:text="Truth/Dare" />
 
@@ -36,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16dp"
+        android:textColor="@color/colorText"
         android:text="Task" />
 
     <TextView
@@ -45,7 +47,8 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:textSize="21dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/colorText"/>
 
     <!--Linear Layout just for disguising-->
     <LinearLayout
@@ -61,6 +64,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/action_repeat"
+        android:textSize="20dp"
+        android:textColor="@color/colorTextBase"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
