--- a/JURANI/app/src/main/res/layout/activity_count.xml
+++ b/JURANI/app/src/main/res/layout/activity_count.xml
@@ -30,6 +30,7 @@
         android:layout_weight="0"
         android:textSize="21dp"
         android:textStyle="bold"
+        android:textColor="@color/colorText"
         android:fontFamily=""
         android:text="@string/text_count_en" />
 
@@ -40,6 +41,7 @@
         android:layout_weight="2"
         android:layout_marginTop="7dp"
         android:textSize="16dp"
+        android:textColor="@color/colorText"
         android:text="@string/text_count_id" />
 
     <LinearLayout
@@ -58,6 +60,7 @@
             android:elevation="0dp"
             android:textSize="30dp"
             android:textStyle="bold"
+            android:textColor="@color/colorText"
             android:text="-"
             style="?android:attr/borderlessButtonStyle"/>
 
@@ -67,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="100dp"
+            android:textColor="@color/colorText"
             android:text="2" />
 
         <Button
@@ -79,6 +83,7 @@
             android:elevation="0dp"
             android:textSize="30dp"
             android:textStyle="bold"
+            android:textColor="@color/colorText"
             android:text="+"
             style="?android:attr/borderlessButtonStyle"/>
 
