--- a/JURANI/app/src/main/res/layout/activity_input_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_input_player.xml
@@ -31,6 +31,7 @@
         android:layout_weight="0"
         android:textSize="21dp"
         android:textStyle="bold"
+        android:textColor="@color/colorText"
         android:fontFamily=""
         android:text="@string/text_who_play" />
 
@@ -42,6 +43,7 @@
         android:layout_weight="15"
         android:layout_marginTop="7dp"
         android:textSize="16dp"
+        android:textColor="@color/colorText"
         android:text="@string/text_nama" />
 
     <EditText
@@ -54,7 +56,8 @@
         android:singleLine="true"
         android:digits="@string/alphabet"
         android:textSize="21dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/colorText"/>
 
     <!--Linear Layout just for disguising-->
     <LinearLayout
