--- a/JURANI/app/src/main/res/layout/activity_random_truth.xml
+++ b/JURANI/app/src/main/res/layout/activity_random_truth.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:textSize="21dp"
         android:textStyle="bold"
+        android:textColor="@color/colorText"
         android:fontFamily=""
         android:text="@string/text_truth_en" />
 
@@ -34,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16dp"
+        android:textColor="@color/colorText"
         android:text="@string/text_truth_id" />
 
     <TextView
@@ -43,7 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:textSize="21dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/colorText"/>
 
     <!--Linear Layout just for disguising-->
     <LinearLayout
