--- a/JURANI/app/src/main/res/layout/activity_chosen_player.xml
+++ b/JURANI/app/src/main/res/layout/activity_chosen_player.xml
@@ -17,11 +17,17 @@
         android:theme="@style/AppTheme"
         app:popupTheme="@style/AppTheme"/>
 
+    <!--Linear Layout just for disguising-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="50"></LinearLayout>
+
     <TextView
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         android:textSize="21dp"
         android:textStyle="bold"
         android:textColor="@color/colorText"
@@ -30,10 +36,10 @@
 
     <TextView
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="15"
+        android:layout_marginTop="7dp"
         android:textSize="16dp"
         android:textColor="@color/colorText"
         android:text="@string/text_turn_id" />
@@ -51,8 +57,8 @@
     <!--Linear Layout just for disguising-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="10"></LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="80"></LinearLayout>
 
     <LinearLayout
         android:gravity="center"
@@ -84,6 +90,5 @@
             android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
-
 
 </LinearLayout>
