--- a/JURANI/app/src/main/res/layout/activity_developer.xml
+++ b/JURANI/app/src/main/res/layout/activity_developer.xml
@@ -63,6 +63,7 @@
         android:layout_marginRight="15dp"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:text="@string/action_close" />
+        android:text="@string/action_close"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"/>
 
 </LinearLayout>
