--- a/JURANI/app/src/main/res/layout/activity_layout.xml
+++ b/JURANI/app/src/main/res/layout/activity_layout.xml
@@ -7,10 +7,10 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimary"
-    tools:context="com.papier.jurani.PlayerInputActivity">
+    tools:context="com.papier.jurani.ChosenPlayerActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/player_toolbar"
+        android:id="@+id/random_player_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:elevation="0dp"
@@ -24,7 +24,6 @@
         android:layout_weight="50"></LinearLayout>
 
     <TextView
-        android:id="@+id/player_parent_text"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,29 +32,25 @@
         android:textStyle="bold"
         android:textColor="@color/colorText"
         android:fontFamily=""
-        android:text="@string/text_who_play" />
+        android:text="@string/text_turn_en" />
 
     <TextView
-        android:id="@+id/player_child_text"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="15"
         android:layout_marginTop="7dp"
-        android:textSize="15dp"
+        android:textSize="16dp"
         android:textColor="@color/colorText"
-        android:text="@string/text_nama" />
+        android:text="@string/text_turn_id" />
 
-    <EditText
-        android:id="@+id/input_name"
+    <TextView
+        android:id="@+id/chosen_name"
         android:background="@color/colorTextBase"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="76dp"
-        android:layout_weight="1"
-        android:singleLine="true"
-        android:digits="@string/alphabet"
-        android:textSize="20dp"
+        android:layout_height="80dp"
+        android:textSize="21dp"
         android:textStyle="bold"
         android:textColor="@color/colorText"/>
 
@@ -65,16 +60,35 @@
         android:layout_height="0dp"
         android:layout_weight="80"></LinearLayout>
 
-    <Button
-        android:id="@+id/next_button_player"
-        android:background="@drawable/button_next"
+    <LinearLayout
+        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="@string/action_next"
-        android:textSize="20dp"
-        android:textColor="@color/colorTextBase"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginRight="10dp">
+
+        <Button
+            android:id="@+id/truth_button"
+            android:background="@drawable/button_truth"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:text="@string/action_truth"
+            android:textSize="20dp"
+            android:textColor="@color/colorTextBase"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:id="@+id/dare_button"
+            android:background="@drawable/button_dare"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:text="@string/action_dare"
+            android:textSize="20dp"
+            android:textColor="@color/colorTextBase"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 
 </LinearLayout>
