--- a/JURANI/app/src/main/res/layout/activity_help.xml
+++ b/JURANI/app/src/main/res/layout/activity_help.xml
@@ -10,64 +10,63 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/photo_group"/>
+
     <TextView
         android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:text="Jurani adalah..." />
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:text="Jurani adalah permainan jujur dan berani yang dapat menjadi ice-breaker ketika sedang bersama teman atau kerabat." />
 
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:text="Untuk memainkannya:"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:text="1. Masukkan jumlah dan nama pemainnya."/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:text="2. Undi penantang."/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:text="3. Pilih JUJUR atau BERANI."/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:text="4. Undi ragam dari tantangan."/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:text="5. Undi objek tantangan."/>
 
     <Button
@@ -76,8 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginRight="15dp"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:textStyle="bold"
         android:text="@string/action_close"
         style="@style/Base.Widget.AppCompat.Button.Borderless"/>
